src/styles/blocks/page.scss
.page {
  background-color: $c-gray-light;
  scroll-behavior: smooth;

  &__body {
    position: relative;
    max-width: 320px;
    margin: 0 auto;

    @include onTablet {
      max-width: 768px;
    }

    @include onDesktop {
      max-width: 1440px;
    }

    &--with-menu {
      overflow: hidden;
      z-index: 1;
    }
  }

  &__section {
    margin-bottom: 110px;
  }

  &__image-header {
    display: none;

    @include onTablet {
      display: block;
      position: absolute;
      top: 0;
      left: 0;
      z-index: -1;
      height: 466px;
      width: 507px;
      background-image: url(../images/svg/rectangle-tablet.svg);
    }

    @include onDesktop {
      display: block;
      position: absolute;
      top: 0;
      left: 0;
      z-index: -1;
      width: 1035px;
      height: 466px;

      background-image: url(../images/svg/rectangle-desktop.svg);
    }
  }

  &__image-shopify {
    width: 320px;
    height: 319px;

    object-position: center;
    object-fit: cover;

    @include onTablet {
      display: block;
      position: absolute;
      top: 121px;
      right: 34px;
      z-index: -1;

      width: 306px;
      height: 306px;

      object-position: center;
      object-fit: cover;
    }

    @include onDesktop {
      display: block;
      position: absolute;
      top: 140px;
      right: 135px;
      z-index: -1;

      width: 500px;
      height: 500px;

      object-position: center;
      object-fit: cover;
    }
  }

  &__menu {
    position: fixed;
    right: 0;
    top: 0;
    transform: translateX(100%);

    &:target {
      transform: translateX(0);
    }
  }

  &__image-team-rectangle {
    display: block;
    position: absolute;
    width: 100vw;
    height: 293px;

    top: 4778px;
    left: 0;
    z-index: -1;
    background-image: url(../images/svg/rectangle-team-mobile.svg);

    @include onTablet {
      top: 2718px;
      left: 0;
      width: 254px;
      height: 467px;
      background-image: url(../images/svg/rectangle-team-tablet.svg);
    }

    @include onDesktop {
      top: 3568px;
      left: 0;
      width: 435px;
      height: 310px;
      background-image: url(../images/svg/rectangle-team-desktop.svg);
    }
  }

  &__word-martin {
    display: none;

    font-family: "Bebas Neue", sans-serif;
    font-weight: 400;
    font-size: 231.8px;
    line-height: 278px;
    letter-spacing: 0.15em;
    text-transform: uppercase;
    color: transparent;
    -webkit-text-stroke: 0.8px $c-turquoise;

    @include onTablet {
      display: block;
      position: absolute;
      top: 2635px;
      left: -44px;
    }

    @include onDesktop {
      top: 3480px;
      left: 74px;
      font-size: 288px;
      line-height: 346px;
      -webkit-text-stroke: 1px $c-turquoise;
    }
  }

  &__word-andy {
    display: none;

    font-family: "Bebas Neue", sans-serif;
    font-weight: 400;
    font-size: 231.8px;
    line-height: 278px;
    letter-spacing: 0.15em;
    text-transform: uppercase;
    color: transparent;
    -webkit-text-stroke: 0.8px $c-turquoise;

    @include onTablet {
      display: block;
      position: absolute;
      top: 3013px;
      left: 309px;
    }

    @include onDesktop {
      top: 4050px;
      left: 838px;
      font-size: 288px;
      line-height: 346px;
      -webkit-text-stroke: 1px $c-turquoise;
    }
  }

  &__image-team {
    display: block;
    position: absolute;
    top: 4400px;
    left: 0;
    width: 100vw;
    height: 240px;
    background-image: url(../images/png/POTR-Pots-team.jpeg);
    background-size: contain;

    @include onTablet {
      display: none;
    }
  }
}

